--- a/UI/src/styles/base.scss
+++ b/UI/src/styles/base.scss
@@ -27,13 +27,13 @@
 
       &.mon1 {
         background-image: none;
+
         #bgMask {
           display: none;
         }
       }
 
       div#taskbar {
-        right: unset;
         width: 60px;
         padding: 0;
         overflow: hidden;
@@ -203,4 +203,312 @@
     border-bottom-style: solid !important;
     border-bottom-width: 2.000000px !important;
     overflow: scroll !important;
+  }
+
+
+
+  .main-column__D0AW2 {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch
+  }
+
+  .scrollable__DXr5q {
+    --contentPadding: 0rem;
+    --contentPaddingHorizontal: var(--contentPadding);
+    --contentPaddingVertical: var(--contentPadding);
+    --scrollbarSize: 16rem;
+    --scrollbarPadding: var(--scrollbarSize);
+    --scrollbarThumbSize: 4rem;
+    --scrollbarMarginHorizontal: 6rem;
+    --scrollbarMarginVertical: 6rem;
+    max-height: 100%;
+    overflow: hidden;
+    position: relative;
+
+    padding: 0;
+
+    &.track-visible-x__qNTUh .track__e3Ogi.y__SMM6s {
+      bottom: var(--scrollbarSize)
+    }
+
+    &.track-visible-y__RCApx .track__e3Ogi.y__SMM6s {
+      opacity: 1;
+      pointer-events: auto
+    }
+
+    &.track-visible-x__qNTUh .track__e3Ogi.x__TNKky {
+      opacity: 1;
+      pointer-events: auto
+    }
+
+    &.track-visible-y__RCApx .track__e3Ogi.x__TNKky {
+      right: var(--scrollbarSize)
+    }
+
+    &.y__SMM6s .content__gqaDy {
+      overflow-y: auto
+    }
+
+    &.track-visible-x__qNTUh .track__e3Ogi.y__SMM6s {
+      bottom: var(--scrollbarSize)
+    }
+
+    &.track-visible-y__RCApx .track__e3Ogi.y__SMM6s {
+      opacity: 1;
+      pointer-events: auto
+    }
+
+    &.track-visible-x__qNTUh .bottom-padding__JS3wW {
+      height: var(--scrollbarPadding)
+    }
+  }
+
+  .bottom-padding__JS3wW {
+    height: var(--contentPaddingVertical)
+  }
+
+  .scrollable__Ptfvi {
+    flex: 1;
+    --contentPadding: 24rem;
+    --scrollbarPadding: 24rem
+  }
+
+
+  .y__SMM6s {
+    width: 100%;
+    height: 0
+  }
+
+
+
+  .track__e3Ogi {
+    position: absolute;
+    background-color: rgba(var(--scrollbarColor), 0.15);
+    border-radius: 2rem;
+    opacity: 0;
+    pointer-events: none;
+
+    &.x__TNKky {
+      bottom: calc((var(--scrollbarSize) - var(--scrollbarThumbSize))/2);
+      left: var(--scrollbarMarginHorizontal);
+      right: var(--scrollbarMarginHorizontal);
+      height: var(--scrollbarThumbSize)
+    }
+
+    &.y__SMM6s {
+      right: calc((var(--scrollbarSize) - var(--scrollbarThumbSize))/2);
+      top: var(--scrollbarMarginVertical);
+      bottom: var(--scrollbarMarginVertical);
+      width: var(--scrollbarThumbSize)
+    }
+  }
+
+
+  .thumb__CiblF {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(var(--scrollbarColor), 0.6);
+    border-radius: 2rem;
+    pointer-events: auto;
+
+
+    &.x__TNKky {
+      width: 0;
+      height: 100%
+    }
+
+    &.y__SMM6s {
+      width: 100%;
+      height: 0
+    }
+
+    &.thumb__CiblF:hover {
+      background-color: rgba(var(--scrollbarColor), 0.8)
+    }
+
+    &.pressed__iMJUl {
+      background-color: rgba(var(--scrollbarColor), 1)
+    }
+  }
+
+
+  .button__WWaYD {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--menuHoverColorBright);
+    padding: 6rem 24rem;
+    border-radius: 4rem;
+    color: var(--menuText1Normal);
+    font-size: var(--fontSizeS);
+    text-transform: uppercase;
+
+    &:hover,
+    .focused {
+      background-color: var(--menuFocusedColor);
+      color: var(--menuText1Inverted)
+    }
+
+    &:hover .icon__OPJFb,
+    .focused .icon__OPJFb {
+      --iconColor: var(--menuText1Inverted)
+    }
+
+    &:active {
+      background-color: var(--menuActiveColor);
+      color: var(--menuText1Inverted)
+    }
+
+    &:active .icon__OPJFb {
+      --iconColor: var(--menuText1Inverted)
+    }
+
+    &.button__WWaYD[disabled] {
+      background-color: var(--menuDisabledColor);
+      color: var(--menuText1Disabled)
+    }
+  }
+
+  .button__SH8X2 {
+    margin: 4rem;
+    white-space: nowrap
+  }
+
+
+  .field__MBOM9 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 8rem 16rem;
+    min-height: 64rem;
+
+    .field__UuCZq {
+      color: var(--menuText1Normal);
+      border-radius: 4rem;
+      font-size: var(--fontSizeM)
+    }
+
+    &:hover {
+      background-color: var(--menuHoverColor)
+    }
+
+    &.focused {
+      background-color: var(--menuActiveColor)
+    }
+
+    &disabled {
+      color: var(--menuText1Disabled)
+    }
+  }
+
+  .label__DGc7_ {
+    flex: 1;
+    margin-right: 16rem
+  }
+
+  .label__ZLbNH {
+    font-size: var(--fontSizeL);
+    overflow: hidden
+  }
+
+  .toggle__ccalN {
+    --checkmarkColor: white;
+    --disabledCheckmarkColor: grey;
+    width: 24rem;
+    height: 24rem;
+    padding-top: var(--gap1);
+    padding-right: var(--gap1);
+    padding-bottom: var(--gap1);
+    padding-left: var(--gap1);
+    background-color: rgba(255, 255, 255, 0);
+    border-style: solid;
+    border-top-width: var(--stroke2);
+    border-left-width: var(--stroke2);
+    border-bottom-width: var(--stroke2);
+    border-right-width: var(--stroke2);
+    border-top-color: var(--accentColorLight);
+    border-left-color: var(--accentColorLight);
+    border-bottom-color: var(--accentColorLight);
+    border-right-color: var(--accentColorLight);
+    border-radius: 3rem;
+    transition: background-color 150ms;
+
+    &.disabled {
+      border-color: dimgray;
+
+      .checkmark__NXVuH {
+        background-color: var(--disabledCheckmarkColor)
+      }
+    }
+
+  }
+
+  .item-mouse-states__FmiyB {
+    &:hover {
+      background-color: var(--hoverColorNormal)
+    }
+
+    &:hover.selected {
+      background-color: var(--selectedColor)
+    }
+
+    &:hover.focused {
+      background-color: var(--focusedColor)
+    }
+
+    &:active {
+      background-color: var(--activeColorNormal)
+    }
+
+    &:active.selected {
+      background-color: var(--selectedColor)
+    }
+
+    &:active.focused {
+      background-color: var(--focusedColor)
+    }
+  }
+
+  .toggle__th_34 {
+    width: 28rem;
+    height: 28rem;
+    border-top-color: var(--menuControlBorder);
+    border-left-color: var(--menuControlBorder);
+    border-bottom-color: var(--menuControlBorder);
+    border-right-color: var(--menuControlBorder);
+
+    &.disabled .checkmark__NXVuH {
+      background-color: var(--disabledCheckmarkColor)
+    }
+  }
+
+  .toggle__th_34,
+  .toggle__th_34:hover,
+  .toggle__th_34:active {
+    background-color: var(--menuControl1)
+  }
+
+  .toggle__th_34.disabled,
+  .toggle__th_34:hover.disabled,
+  .toggle__th_34:active.disabled {
+    opacity: .5
+  }
+
+  .checkmark__NXVuH {
+    width: 100%;
+    height: 100%;
+    mask-image: url('//gameui/Media/Glyphs/Checkmark.svg');
+    mask-size: 100%;
+    background-color: var(--checkmarkColor);
+    opacity: 0;
+    transition: opacity 150ms cubic-bezier(0.32, 0, 0.67, 0)
+  }
+
+  .checkmark__NXVuH.checked {
+    opacity: 1;
+    transition: opacity 150ms cubic-bezier(0.33, 1, 0.68, 1)
   }
