--- a/UI/_vanillaOverlaySystem/src/styles/base.scss
+++ b/UI/_vanillaOverlaySystem/src/styles/base.scss
@@ -1,4 +1,4 @@
-[class^='pause-menu_'],[class^='menu-ui_']{
+[class^='pause-menu_'],[class^='menu-ui_'],[class^='dropdown-popup_']{
   z-index: 100;
 }
 #EUIS_Container {
