--- a/UI/_extraScreenOS/src/styles/base.scss
+++ b/UI/_extraScreenOS/src/styles/base.scss
@@ -502,7 +502,7 @@
   .checkmark__NXVuH {
     width: 100%;
     height: 100%;
-    mask-image: url('//gameui/Media/Glyphs/Checkmark.svg');
+    mask-image: url('coui://gameui/Media/Glyphs/Checkmark.svg');
     mask-size: 100%;
     background-color: var(--checkmarkColor);
     opacity: 0;
