--- a/UI/root/src/components/GameScrollComponent.scss
+++ b/UI/root/src/components/GameScrollComponent.scss
@@ -140,8 +140,8 @@
 
 .guic-scrollable-container-wrapper {
     position: relative;
-    width: 100%;
-    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
     display: flex;
     flex-direction: row;
     overflow: hidden;
