--- a/_Frontends/UI/_extraScreenOS/src/index.ejs
+++ b/_Frontends/UI/_extraScreenOS/src/index.ejs
@@ -63,7 +63,7 @@
       <link href="coui://gameui/index.css" rel="stylesheet">
       <link href="base.css" rel="stylesheet">
       <script src="dependencies/cohtml.js"></script>
-      <script>window.postMessage = function () { }</script>
+      <script>window.postMessage = function (x) { console.log(x) }</script>
 </head>
 
 <body class="transparent">
