Work-arounding webpack hot reload

--- a/_Frontends/UI/_extraScreenOS/src/index.ejs
+++ b/_Frontends/UI/_extraScreenOS/src/index.ejs
@@ -63,7 +63,10 @@
       <link href="coui://gameui/index.css" rel="stylesheet">
       <link href="base.css" rel="stylesheet">
       <script src="dependencies/cohtml.js"></script>
-      <script>window.postMessage = function (x) { console.log(x) }</script>
+      <script>window.postMessage = function (x) {
+          if ((x + "").startsWith("webpackHotUpdate")) window.location.reload();
+          console.log(x)
+        }</script>
 </head>
 
 <body class="transparent">
