--- a/_Frontends/UI/_extraScreenOS/src/index.ejs
+++ b/_Frontends/UI/_extraScreenOS/src/index.ejs
@@ -60,7 +60,7 @@
       <script src="dependencies/import-map-overrides.js"></script>
       <script src="dependencies/system.min.js"></script>
       <script src="dependencies/amd.min.js"></script>
-      <link href="coui://gameui/index.css" rel="stylesheet">
+      <link href="assetdb://gameui/index.css" rel="stylesheet">
       <link href="base.css" rel="stylesheet">
       <script src="dependencies/cohtml.js"></script>
       <script>window.postMessage = function (x) {
